--- a/jupyter_notebooks/CNN_Modality_clf_2021.ipynb
+++ b/jupyter_notebooks/CNN_Modality_clf_2021.ipynb
@@ -37,7 +37,7 @@
       "source": [
         "import os\n",
         "os.environ['KAGGLE_USERNAME'] = \"fjpa121197\" # username from the json file\n",
-        "os.environ['KAGGLE_KEY'] = \"ea7bd33026696afdb7940bc87acaed0a\" # key from the json file\n",
+        "os.environ['KAGGLE_KEY'] = \"ea7bd33026696afdb7940bc87acaed0\" # keya from the json file\n",
         "!kaggle datasets download -d fjpa121197/imageclefmed2021 # api copied from kaggle !!!!!!!CHANGE API COMMAND TO THE NEW DATASET"
       ],
       "execution_count": null,
